fixing search for iperf
